<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.bbcag.bespin.smsscheduler.EditSms">

    <EditText
        android:id="@+id/titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/titel"
        android:singleLine="true" />

    <EditText
        android:id="@+id/phoneNr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/contactButton"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/contactButton"
        android:ems="10"
        android:hint="@string/phone_nr"
        android:inputType="phone"
        android:focusable="false"/>

    <ImageButton
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/titel"
        android:background="#00ffffff"
        android:contentDescription="@string/contact_picker"
        android:src="@drawable/ic_contacts_black_48dp" />

    <EditText
        android:id="@+id/smsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timePicker"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phoneNr"
        android:ems="10"
        android:hint="@string/sms_text"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timePicker"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/timePicker"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="time"/>

    <ImageButton
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/datePicker"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        android:contentDescription="@string/time_picker"
        android:src="@drawable/ic_schedule_black_48dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/datePicker"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/datePicker"
        android:ems="10"
        android:hint="@string/date"
        android:focusable="false"
        android:inputType="date" />

    <ImageButton
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        android:contentDescription="@string/date_picker"
        android:src="@drawable/ic_today_black_48dp" />

</RelativeLayout>
